<resources>
    <string name="app_name">Confidential</string>
    <string name="need_a_new_account">   Need a New Account?   </string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="your_email">Email</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="welcome_to_confidential_app">Welcome to Confidential App</string>
    <string name="confidential">CONFIDENTIAL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_name">Display Name</string>
    <string name="welcome_text">Hello Confidant.</string>
    <string name="default_status_text">Hello there, new Confidant.</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_status">Your status</string>
    <string name="display_single_name">Display Name</string>
    <string name="user_default_status">User default status</string>
    <string name="current_user_status">Current User Status</string>
    <string name="total_number_of_friends">Total Number of Friends:</string>
    <string name="display_name_profile">User Profile Display Name</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name_chat">Display Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="chat_message_box_text">Enter a message.</string>
    <string name="confidential_toolBar_text">CONFIDENTIAL</string>
    <string name="enter_message">Enter Message...</string>
    <string name="default_chat_message">Message</string>
    <string name="no_messages">No messages</string>
    <string name="confidential_timer">Timer</string>
    <string name="confidential_message_text">Message Text</string>
    <string name="confidential_display_name">Display Name</string>
    <string name="no_requests_at_the_moment">No Requests at the Moment</string>
    <string name="no_open_chats_at_the_moment">No Open Chats at the Moment</string>
    <string name="no_confidants_at_the_moment">No Confidants at the Moment</string>
    <string name="become_a_confidant">Become a Confidant</string>
    <string name="welcome_new_confidant">Welcome New Confidant</string>
    <string name="time_sent">00:00</string>
    <string name="message_text">Message Text</string>
    <string name="message_group_display_name">Display Name</string>
    <string name="message_display_name">Display Name</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="my_account">My Account</string>
    <string name="number_of_confidants">Number of Confidants</string>
    <string name="_0">0</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="security_pin">Pin</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_profile_picture">CHANGE PROFILE PICTURE</string>
    <string name="send_request">Send Request</string>
    <string name="decline_request">Decline Request</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="all_users_actionbar">All Users</string>
    <string name="enter_pin_security">PIN</string>
    <string name="log_out_security">Sign Out</string>
    <string name="ok">OK</string>
    <string name="confidants">Confidants</string>
    <string name="confidential_mode">CONFIDENTIAL MODE</string>
    <string name="standard_mode">STANDARD MODE</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_password_settings">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="current_password">Current Password</string>
    <string name="change_password_title">Change Password</string>
    <string name="update">Update</string>
    <string name="search_hint">Search</string>
    <string name="search_for_confidants">Search for Confidants</string>
    <string name="confidential_chat">Confidential Chat</string>

    <string name="finger_print_authentication">Fingerprint for "'Confidential'"</string>
    <string name="cancel">Cancel</string>
    <string name="finger_print_message_to_user">Place your Finger on Scanner to Access the App.</string>
    <string name="fingerprint_authentication_bar_title">Fingerprint Authentication</string>
    <string name="no_results">No Results Found</string>
    <string name="typing_string">Typing...</string>
    <string name="make_a_post">Make a Post</string>
    <string name="feed">Feed</string>
    <string name="no_feed_activity_at_the_moment">No Feed Activity at the Moment</string>
    <string name="public_text">PUBLIC</string>
    <string name="enter">ENTER</string>
</resources>
