<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.aguilartristen.confidential.ProfileActivity">

    <include
        android:id="@+id/profile_page_toolbar"
        layout="@layout/app_bar_layout"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/search_profile_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/red_circle"
        android:padding="2dp"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_page_toolbar"/>

    <TextView
        android:id="@+id/profile_user_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/default_status_text"
        android:textAlignment="center"
        android:textColor="@color/Red"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_profile_image"/>

    <TextView
        android:id="@+id/profile_numberOfFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/number_of_confidants"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/search_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_page_toolbar"/>

    <TextView
        android:id="@+id/confidants_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/_0"
        android:textColor="@color/Red"
        android:textSize="30sp"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_numberOfFriends"
        />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button_red"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/send_request"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_decline_req_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button_white"
        android:paddingLeft="10dp"
        android:paddingRight="14dp"
        android:text="@string/decline_request"
        android:textColor="@color/Red"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>
