<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context="com.aguilartristen.confidential.MyAccountActivity">

    <include
        android:id="@+id/my_account_page_toolbar"
        layout="@layout/app_bar_layout_my_account"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_account_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_circle"
        android:padding="2dp"
        android:src="@drawable/user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account_page_toolbar"/>

    <Button
        android:id="@+id/my_account_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button_red"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/change_image"
        android:textColor="@color/White"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/my_account_change_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/my_account_change_status"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_button_white"
        android:paddingLeft="10dp"
        android:paddingRight="14dp"
        android:text="@string/change_status"
        android:textColor="@color/Red"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/my_account_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="serif"
        android:text="@string/display_name"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account_image"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_account_anonymous_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/confidential_logo"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/my_account_status"
        app:layout_constraintStart_toEndOf="@+id/my_account_display_name"
        app:layout_constraintTop_toTopOf="@+id/my_account_display_name"/>

    <TextView
        android:id="@+id/my_account_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_status_text"
        android:textAlignment="center"
        android:textColor="@color/Red"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account_display_name"/>

    <TextView
        android:id="@+id/my_account_numberOfFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_confidants"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/my_account_image"
        app:layout_constraintTop_toBottomOf="@+id/my_account_page_toolbar"/>

    <TextView
        android:id="@+id/my_account_confidants_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/_0"
        android:textColor="@color/Red"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/my_account_image"
        app:layout_constraintTop_toBottomOf="@+id/my_account_numberOfFriends"/>

    <!--
    <Button
        android:id="@+id/settings_confidential_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_black"
        android:fontFamily="serif"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:text="Confidential Mode"
        android:textColor="@color/Red"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/settings_status"
        app:layout_constraintTop_toBottomOf="@+id/settings_status"/>
    -->

    <Switch
        android:id="@+id/my_account_switch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:gravity="left"
        android:paddingBottom="8dp"
        android:paddingEnd="26dp"
        android:paddingStart="26dp"
        android:paddingTop="8dp"
        android:text="@string/standard_mode"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/my_account_change_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account_status"/>


</android.support.constraint.ConstraintLayout>
